fix: increase z-index for header component

--- a/client/src/app/header/header.component.scss
+++ b/client/src/app/header/header.component.scss
@@ -3,7 +3,7 @@
   position: fixed;
   width: 100%;
   background-color: var(--background-secondary);
-  z-index: 1;
+  z-index: 2;
 }
 
 .navbar {
